...
                    android:background="?appInputFieldBorder">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/EditScreenField"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/change_record_actions_hint"
                        app:layout_constraintEnd_toStartOf="@id/arrowChangeRecordAction"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/arrowChangeRecordAction"
                        style="@style/EditScreenFieldArrow"
...
        app:layout_constraintTop_toBottomOf="@id/containerChangeRecordMain"
        tools:itemCount="1"
        tools:listitem="@layout/change_record_comment_field_item"
        tools:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChangeRecordAction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?android:colorBackground"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingTop="16dp"
...
